Solved the issue with scrolling on mobile on the charts
Up to now, it was impossible to scroll on mobile when the user's finger was on the charts.
This issue is now solved: on desktop, the graphics still shows some data when the mouse is over it ; on mobile, the data are not shown, but it is now possible to scroll even when the finger is over the charts.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1397,6 +1397,12 @@ app-root profile .tableRow.no-interaction-row:hover {
   opacity: 1 !important;
 }
 
+@media (pointer: coarse) {
+  app-root profile ag-charts-angular {
+    pointer-events: none !important;
+  }
+}
+
 app-root profile .eventCardBody {
   padding: 10px;
   border-radius: 10px;
